// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BinaryOperation 1`] = `
{
  "kind": "POSTFIX",
  "operator": "!",
  "value": {
    "kind": "POSTFIX",
    "operator": "!",
    "value": {
      "kind": "POSTFIX",
      "operator": "!",
      "value": {
        "kind": "NumberLiteral",
        "value": 1,
      },
    },
  },
}
`;

exports[`BinaryOperation 2`] = `
{
  "kind": "BINARY_RIGHT",
  "left": {
    "kind": "NumberLiteral",
    "value": 1,
  },
  "operator": "^",
  "right": {
    "kind": "BINARY_RIGHT",
    "left": {
      "kind": "NumberLiteral",
      "value": 2,
    },
    "operator": "^",
    "right": {
      "kind": "NumberLiteral",
      "value": 3,
    },
  },
}
`;

exports[`BinaryOperation 3`] = `
{
  "kind": "BINARY_RIGHT",
  "left": {
    "kind": "PREFIX",
    "operator": "-",
    "value": {
      "kind": "BINARY_LEFT",
      "left": {
        "kind": "NumberLiteral",
        "value": 3,
      },
      "operator": "+",
      "right": {
        "kind": "NumberLiteral",
        "value": 3,
      },
    },
  },
  "operator": "^",
  "right": {
    "kind": "BINARY_RIGHT",
    "left": {
      "kind": "NumberLiteral",
      "value": 3,
    },
    "operator": "^",
    "right": {
      "kind": "POSTFIX",
      "operator": "!",
      "value": {
        "kind": "NumberLiteral",
        "value": 2,
      },
    },
  },
}
`;

exports[`BinaryOperation 4`] = `
{
  "kind": "BINARY_RIGHT",
  "left": {
    "kind": "PREFIX",
    "operator": "-",
    "value": {
      "kind": "BINARY_LEFT",
      "left": {
        "kind": "NumberLiteral",
        "value": 3,
      },
      "operator": "+",
      "right": {
        "kind": "NumberLiteral",
        "value": 3,
      },
    },
  },
  "operator": "^",
  "right": {
    "kind": "BINARY_RIGHT",
    "left": {
      "kind": "NumberLiteral",
      "value": 3,
    },
    "operator": "^",
    "right": {
      "kind": "POSTFIX",
      "operator": "!",
      "value": {
        "kind": "NumberLiteral",
        "value": 2,
      },
    },
  },
}
`;
